fix style issue on ios

--- a/zth/src/assets/_mixins.scss
+++ b/zth/src/assets/_mixins.scss
@@ -4,7 +4,10 @@
     -webkit-scrollbar-color: $color transparent;
     -moz-scrollbar-color: $color transparent;
     
-    
+    // IOS
+    &::-webkit-scrollbar-track {
+      border-radius: $border-radius;
+    }
     // Chrome
     &::-webkit-scrollbar {
       height: $height;
